# TestCMake

./: .gitignore  LICENSE  README.md  TestCMake.spr
TestCMake/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
TestCMake/src/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.qrc
viMarkdown/: CMakeLists.txt
viMarkdown/src/: CMakeLists.txt  MainWindow.qrc  ReplaceDialog.cpp  ReplaceDialog.h  ReplaceDialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
viMarkdown/src/images/: viMarkdown512.mdp
